--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -29,172 +29,165 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
 
+        <ImageView
+            android:id="@+id/ep_profile_picture"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:contentDescription="@string/profile_picture"
+            android:scaleType="centerCrop"
+            android:src="@drawable/default_header" />
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/ep_profile_picture"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:contentDescription="@string/profile_picture"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/default_header" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp">
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:orientation="vertical"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp">
+                    android:orientation="horizontal"
+                    android:paddingTop="5dp">
 
-                    <LinearLayout
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/hint_username"
+                        android:gravity="bottom|center_horizontal"
+                        android:paddingTop="24dp"
+                        android:src="@drawable/ic_person_black_24dp"
+                        android:tint="@color/colorPrimary" />
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/ep_input_layout_username"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:paddingTop="5dp">
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="16dp"
+                        app:counterEnabled="true"
+                        app:counterMaxLength="@integer/max_length_username">
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="bottom|center_horizontal"
-                            android:paddingTop="24dp"
-                            android:tint="@color/colorPrimary"
-                            android:src="@drawable/ic_person_black_24dp"
-                            android:contentDescription="@string/hint_username"/>
-
-                        <android.support.design.widget.TextInputLayout
-                            android:id="@+id/ep_input_layout_username"
+                        <EditText
+                            android:id="@+id/ep_input_username"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginStart="16dp"
-                            app:counterEnabled="true"
-                            app:counterMaxLength="@integer/max_length_username">
+                            android:hint="@string/hint_username"
+                            android:inputType="textNoSuggestions"
+                            android:maxLength="@integer/max_length_username"
+                            android:textSize="@dimen/material_text_subhead" />
 
-                            <EditText
-                                android:id="@+id/ep_input_username"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:inputType="textNoSuggestions"
-                                android:hint="@string/hint_username"
-                                android:maxLength="@integer/max_length_username"
-                                android:textSize="@dimen/material_text_subhead" />
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
 
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-                    <LinearLayout
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/hint_email"
+                        android:gravity="bottom|center_horizontal"
+                        android:paddingTop="26dp"
+                        android:src="@drawable/ic_email_black_24dp"
+                        android:tint="@color/colorPrimary" />
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/ep_input_layout_email"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="16dp"
+                        app:counterEnabled="true"
+                        app:counterMaxLength="@integer/max_length_email">
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="bottom|center_horizontal"
-                            android:paddingTop="26dp"
-                            android:tint="@color/colorPrimary"
-                            android:src="@drawable/ic_email_black_24dp"
-                            android:contentDescription="@string/hint_email" />
-
-                        <android.support.design.widget.TextInputLayout
-                            android:id="@+id/ep_input_layout_email"
+                        <EditText
+                            android:id="@+id/ep_input_email"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginStart="16dp"
-                            app:counterEnabled="true"
-                            app:counterMaxLength="@integer/max_length_email">
+                            android:hint="@string/hint_email"
+                            android:inputType="textEmailAddress"
+                            android:maxLength="@integer/max_length_email"
+                            android:textSize="@dimen/material_text_subhead" />
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
 
-                            <EditText
-                                android:id="@+id/ep_input_email"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/hint_email"
-                                android:inputType="textEmailAddress"
-                                android:maxLength="@integer/max_length_email"
-                                android:textSize="@dimen/material_text_subhead" />
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:paddingTop="5dp">
 
-                    <LinearLayout
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/hint_location"
+                        android:gravity="bottom|center_horizontal"
+                        android:paddingTop="26dp"
+                        android:src="@drawable/ic_location_on_black_24dp"
+                        android:tint="@color/colorPrimary" />
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/ep_input_layout_location"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:paddingTop="5dp">
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="16dp"
+                        app:counterEnabled="true"
+                        app:counterMaxLength="@integer/max_length_location">
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="bottom|center_horizontal"
-                            android:paddingTop="26dp"
-                            android:tint="@color/colorPrimary"
-                            android:src="@drawable/ic_location_on_black_24dp"
-                            android:contentDescription="@string/hint_location" />
-
-                        <android.support.design.widget.TextInputLayout
-                            android:id="@+id/ep_input_layout_location"
+                        <EditText
+                            android:id="@+id/ep_input_location"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginStart="16dp"
-                            app:counterEnabled="true"
-                            app:counterMaxLength="@integer/max_length_location">
+                            android:hint="@string/hint_location"
+                            android:maxLength="@integer/max_length_location"
+                            android:textSize="@dimen/material_text_subhead" />
 
-                            <EditText
-                                android:id="@+id/ep_input_location"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/hint_location"
-                                android:textSize="@dimen/material_text_subhead"
-                                android:maxLength="@integer/max_length_location"/>
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
 
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:paddingTop="5dp">
 
-                    <LinearLayout
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/hint_biography"
+                        android:gravity="bottom|center_horizontal"
+                        android:paddingTop="26dp"
+                        android:src="@drawable/ic_description_black_24dp"
+                        android:tint="@color/colorPrimary" />
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/ep_input_layout_description"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:paddingTop="5dp">
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="16dp"
+                        app:counterEnabled="true"
+                        app:counterMaxLength="@integer/max_length_biography">
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="bottom|center_horizontal"
-                            android:paddingTop="26dp"
-                            android:tint="@color/colorPrimary"
-                            android:src="@drawable/ic_description_black_24dp"
-                            android:contentDescription="@string/hint_biography" />
-
-                        <android.support.design.widget.TextInputLayout
-                            android:id="@+id/ep_input_layout_description"
+                        <EditText
+                            android:id="@+id/ep_input_biography"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginStart="16dp"
-                            app:counterEnabled="true"
-                            app:counterMaxLength="@integer/max_length_biography">
+                            android:hint="@string/hint_biography"
+                            android:inputType="textMultiLine"
+                            android:maxLength="250"
+                            android:textSize="@dimen/material_text_body1" />
 
-                            <EditText
-                                android:id="@+id/ep_input_biography"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:inputType="textMultiLine"
-                                android:maxLength="250"
-                                android:hint="@string/hint_biography"
-                                android:textSize="@dimen/material_text_body1"/>
-
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
+                    </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
